add bootstrap.min.css in order to beauty the form

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <script src="./jslib/jquery.min.js"></script>
     <script src="./jslib/createform.js"></script>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
   </head>
 <body>
   <script>
