rewrite the formatter && add funcs to class

--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html>
   <title>表单定制</title>
   <head>
-    <script src="./jslib/jquery.min.js"></script>
-    <script src="./jslib/createform.js"></script>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <script src="./jslib/jquery.min.js"></script>
+    <script src="./jslib/bootstrap.min.js"></script>
+    <script src="./jslib/createform.js"></script>
   </head>
 <body>
-  <script>
-    var myForm = createForm();
-    myForm.generateFormByAjax("test");
-  </script>
+  <!--<script>-->
+    <!--var myForm = createForm();-->
+    <!--myForm.generateFormByAjax("test");-->
+  <!--</script>-->
+<select>
+  <option>1</option>
+  <option>1</option>
+  <option>1</option>
+  </select>
 </body>
 </html>
