modify readme.md & index.html

--- a/index.html
+++ b/index.html
@@ -8,14 +8,9 @@
     <script src="./jslib/createform.js"></script>
   </head>
 <body>
-  <!--<script>-->
-    <!--var myForm = createForm();-->
-    <!--myForm.generateFormByAjax("test");-->
-  <!--</script>-->
-<select>
-  <option>1</option>
-  <option>1</option>
-  <option>1</option>
-  </select>
+  <script>
+    var myForm = createForm();
+    myForm.generateFormByAjax("test");
+  </script>
 </body>
 </html>
