--- a/index.html
+++ b/index.html
@@ -2,15 +2,34 @@
 <html>
   <title>表单定制</title>
   <head>
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/bootstrap-theme.css">
+    <link rel="stylesheet" href="./css/nav.css">
     <script src="./jslib/jquery.min.js"></script>
     <script src="./jslib/bootstrap.min.js"></script>
-    <script src="./jslib/createform.js"></script>
   </head>
 <body>
-  <script>
-    var myForm = createForm();
-    myForm.generateFormByAjax("test");
-  </script>
+  <div class="container">
+    <div class="masthead">
+      <h3 class="text-muted">ExcelToForm</h3>
+      <nav>
+        <ul class="nav nav-justified">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+      <div class="row">
+        <div class="col-sm-4 col-md-4 sidebar" >
+          <ul class="nav nav-sidebar">
+            <li class="active"><a href="#">菜单 <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">选择缺省样式</a></li>
+            <li><a href="#">上传Excel文件</a></li>
+            <li><a href="#">上传样式文件</a></li>
+          </ul>
+        </div>
+      </div>
+  </div>
 </body>
 </html>
