rm unused file&& modify class

--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
       </nav>
     </div>
       <div class="row">
-        <div class="col-sm-4 col-md-4 sidebar" >
+        <div class="col-sm-3 col-md-3 sidebar" >
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">菜单 <span class="sr-only">(current)</span></a></li>
             <li><a href="#">选择缺省样式</a></li>
             <li><a href="#">上传Excel文件</a></li>
             <li><a href="#">上传样式文件</a></li>
           </ul>
+        </div>
+        <div class="col-sm-8 col-md-8">
+          <!--缺省样式-->
+          <!--上传文件-->
+          <!--上传css文件-->
         </div>
       </div>
   </div>
